@@ -7,6 +7,7 @@ import java.nio.ByteBuffer;
 import java.nio.channels.SeekableByteChannel;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.List;
@@ -35,33 +36,33 @@ import org.junit.Test;
  * @author laim0nas100
  */
 public class SafeOptTest {
-
+    
     public static class NullInt {
-
+        
         public Integer get() {
             return null;
         }
     }
-
+    
     @Test
     public void test() {
         SafeOpt<Number> num = SafeOpt.of(10L).select(Long.class);
-
+        
         assertThat(num.isPresent()).isTrue();
-
+        
         SafeOpt<Integer> map = SafeOpt.of(10).map(m -> m * 10);
         Integer expected = 10 * 10;
         assertThat(map.get()).isEqualTo(expected);
-
+        
         SafeOpt<String> empty = SafeOpt.empty().map(m -> m + "");
-
+        
         NullInt nullInt = new NullInt();
         assertThat(empty.isEmpty()).isTrue();
         assertThat(empty.getError().isEmpty()).isTrue();
         SafeOpt<Object> errored = SafeOpt.error(new PassableException("Failed"));
         assertThat(errored.isEmpty()).isTrue();
         assertThat(errored.getError().isPresent()).isTrue();
-
+        
         SafeOpt<Integer> mapNull = map.map(m -> nullInt.get()); // supposed to be null
         SafeOpt<Integer> mapEx = map.map(m -> 0 + nullInt.get());
         ThrowableTypeAssert<NoSuchElementException> noSuchElement = Assertions.assertThatExceptionOfType(NoSuchElementException.class);
@@ -70,7 +71,7 @@ public class SafeOptTest {
         nestedException.isThrownBy(() -> {
             Integer ok = mapEx.asOptional().get() + 0; // exception from SafeOpt invokes first
         });
-
+        
         Assertions.assertThatExceptionOfType(NullPointerException.class).isThrownBy(() -> {
             try {
                 mapEx.asOptional().get();
@@ -80,18 +81,18 @@ public class SafeOptTest {
         });
         ThrowableTypeAssert<NestedException> nested = Assertions.assertThatExceptionOfType(NestedException.class);
         ThrowableTypeAssert<RuntimeException> runtime = Assertions.assertThatExceptionOfType(RuntimeException.class);
-
+        
         nested.isThrownBy(() -> mapEx.throwIfErrorAsNested());
         nested.isThrownBy(() -> mapEx.get());
         runtime.isThrownBy(() -> mapEx.throwIfErrorRuntime());
-
+        
         assertThat(map.flatMapOpt(m -> Optional.ofNullable(m)).get()).isEqualTo(expected);
         assertThat(map.flatMap(m -> SafeOpt.ofNullable(m)).get()).isEqualTo(expected);
         assertThat(map.flatMapOpt(m -> SafeOpt.ofNullable(m).asOptional()).get()).isEqualTo(expected);
         assertThat(map.flatMap(m -> SafeOpt.error(new PassableException("Some error"))).getError().select(PassableException.class).isPresent()).isTrue();
-
+        
     }
-
+    
     @Test
     public void testLazy() {
         List<String> states1 = new ArrayList<>();
@@ -117,7 +118,7 @@ public class SafeOptTest {
                 .peek(m -> {
                     states1.add("peek");
                 });
-
+        
         assertThat(states1).isEmpty();
         Integer result = lazy.chain(m -> {
             return m.orNull();
@@ -155,12 +156,12 @@ public class SafeOptTest {
                 .peekError(error -> {
                     stateError.add("error");
                 });
-
+        
         assertThat(stateError).isEmpty();
         peekError.orNull();// collapse
         assertThat(stateError).containsExactly("error");
     }
-
+    
     @Test
     public void testAsync() {
         Collection<String> states1 = new LinkedBlockingDeque<>();
@@ -168,7 +169,7 @@ public class SafeOptTest {
         SafeOpt<Integer> lazy = SafeOpt.ofAsync("10")
                 .map(Integer::parseInt)
                 .filter(f -> {
-
+                    
                     states1.add("filter");
                     return true;
                 })
@@ -187,7 +188,7 @@ public class SafeOptTest {
                 .peek(m -> {
                     states1.add("peek");
                 });
-
+        
         lazy.orNull();
         assertThat(states1).containsExactly("filter", "map", "flatMap", "flatMapOpt", "peek");
         lazy
@@ -211,7 +212,7 @@ public class SafeOptTest {
                 .peek(m -> {
                     states2.add("peek");
                 }).orNull();
-
+        
         assertThat(states2).containsSequence(states1); //ensure no double inserts
         List<String> stateError = new ArrayList<>();
         SafeOpt<Integer> peekError = SafeOpt.ofAsync("NaN").map(Integer::parseInt)
@@ -222,7 +223,7 @@ public class SafeOptTest {
                 .peekError(error -> {
                     stateError.add("error");
                 });
-
+        
         peekError.getError().map(err -> {
             System.out.println("Using error 1");
             return err;
@@ -231,12 +232,12 @@ public class SafeOptTest {
                     System.out.println("Using error 2");
                     return err;
                 }).orNull();
-
+        
         peekError.orNull();// collapse
         assertThat(stateError).containsExactly("error");
-
+        
     }
-
+    
     public void testAsyncReal(boolean inside) {
         Collection<String> states1 = new LinkedBlockingDeque<>();
         Collection<String> states2 = new LinkedBlockingDeque<>();
@@ -285,7 +286,7 @@ public class SafeOptTest {
                 .peek(m -> {
                     states2.add("peek");
                 });
-
+        
         Collection<String> stateError = new LinkedBlockingDeque<>();
         SafeOpt<Integer> peekError = SafeOpt.ofAsync("NaN").map(Integer::parseInt)
                 .filter(f -> {
@@ -301,23 +302,23 @@ public class SafeOptTest {
             stateError.add("Using error 1");
             return err;
         });
-
+        
         SafeOpt<Throwable> map2 = map1.map(err -> {
             stateError.add("Using error 2");
             return err;
         });
         Throwable orNull = map2.orNull();
-
+        
         assertThat(orNull).isNotNull();
-
+        
         peek.orNull();
         assertThat(states1).containsExactly("filter", "map", "flatMap", "flatMapOpt", "peek");
         assertThat(states1).containsSequence(states2);
-
+        
         assertThat(stateError).containsExactly("error", "Using error 1", "Using error 2");
-
+        
     }
-
+    
     public static void benchTestas() throws Exception {
 //        ExecutorService pool = Executors.newVirtualThreadPerTaskExecutor();
         ExecutorService other = Checked.createDefaultExecutorService();
@@ -335,13 +336,13 @@ public class SafeOptTest {
 //                futures.add(submit);
 
             }
-
+            
         }
         for (Future f : futures) {
             f.get();
         }
     }
-
+    
     @Test
     public void testCancelOnFinish() throws Exception {
         int completion = 5;
@@ -359,9 +360,9 @@ public class SafeOptTest {
                     .chain(scope.completionListener());
             list.add(chain);
         }
-
+        
         System.out.println("Waiting for finish:" + list.size());
-
+        
         try {
 //            for (int i = 0; i < list.size(); i++) {
 //                System.out.println("Awaited:" + list.get(i).throwAnyGet());
@@ -371,10 +372,10 @@ public class SafeOptTest {
             System.out.println(ex.getMessage());
             throw ex;
         }
-
+        
         System.out.println("Completed:" + scope.getCompleted().size());
         System.out.println(scope.getCompleted());
-
+        
         Assertions.assertThat(scope.getCompleted().size()).isEqualTo(completion);
         List<Integer> collect = scope.getCompleted().stream().map(m -> (int) m.get()).collect(Collectors.toList());
         List<Integer> expected = new ArrayList<>();
@@ -383,9 +384,9 @@ public class SafeOptTest {
         }
         Assertions.assertThat(scope.getCompleted().size()).isEqualTo(completion);
         Assertions.assertThat(collect).containsSequence(expected);
-
+        
     }
-
+    
     @Test
     public void testCancel() throws Exception {
         SafeScope scope = new SafeScope(new CancelPolicy(true, true, true));
@@ -450,14 +451,14 @@ public class SafeOptTest {
             }
             return Integer.parseInt(m);
         });
-
+        
         SafeOpt<Integer> val3 = scope.of("NaN").map(m -> {
             System.out.println("Try fail later");
             Thread.sleep(5500);
             System.out.println("Should not FAIL here");
             throw new RuntimeException("We failed again...");
         });
-
+        
         System.out.println("Waiting for finish");
         try {
 //            System.out.println(val1.throwAnyOrNull());
@@ -484,7 +485,7 @@ public class SafeOptTest {
 //        pool.shutdown();
     }
     
-     @Test
+    @Test
     public void testCancelNested() throws Exception {
         SafeScope scope = new SafeScope(new CancelPolicy(true, true, true));
 //        ExecutorService pool = Executors.newFixedThreadPool(12);
@@ -506,8 +507,8 @@ public class SafeOptTest {
                 .peek(val -> {
                     System.out.println("Async consumed value:" + val);
                 })
-                .flatMap(m->{
-                    return scope.ofUnpinnable(m).peek(v->{
+                .flatMap(m -> {
+                    return scope.ofUnpinnable(m).peek(v -> {
                         nested.incrementAndGet();
                         Thread.sleep(2000);//should cancel async also
                         nested.incrementAndGet();
@@ -557,14 +558,14 @@ public class SafeOptTest {
             }
             return Integer.parseInt(m);
         });
-
+        
         SafeOpt<Integer> val3 = scope.of("NaN").map(m -> {
             System.out.println("Try fail later");
             Thread.sleep(5500);
             System.out.println("Should not FAIL here");
             throw new RuntimeException("We failed again...");
         });
-
+        
         System.out.println("Waiting for finish");
         try {
 //            System.out.println(val1.throwAnyOrNull());
@@ -591,7 +592,7 @@ public class SafeOptTest {
                 );
 //        pool.shutdown();
     }
-
+    
     @Test
     public void testAsyncBench() throws InterruptedException, ExecutionException {
         System.out.println("Testing bench");
@@ -610,23 +611,23 @@ public class SafeOptTest {
 //                });
 //                futures.add(submit);
             }
-
+            
         }
         for (Future f : futures) {
             f.get();
         }
         System.out.println("Benched in:" + (System.currentTimeMillis() - start));
-
+        
     }
-
+    
     public static void pinnedSleep(long sleep) throws InterruptedException {
-
+        
         Object ob = new Object();
         synchronized (ob) {
             Thread.sleep(sleep);
         }
     }
-
+    
     public static void cmdSleep(int seconds) throws IOException, InterruptedException {
         Process start = new ProcessBuilder("ping", "-n", String.valueOf(seconds), "127.0.0.1").start();
         BufferedReader is = new BufferedReader(new InputStreamReader(start.getInputStream()));
@@ -634,7 +635,7 @@ public class SafeOptTest {
         while ((read = is.readLine()) != null) {
 //            System.out.println(read);
         }
-
+        
     }
 
     /**
@@ -643,9 +644,9 @@ public class SafeOptTest {
      * @throws IOException
      */
     public static void read() throws IOException {
-
+        
         String dir = "C:\\files\\YT\\spec";
-        List<Path> list = Files.list(Path.of(dir)).toList();
+        List<Path> list = Files.list(Paths.get(dir)).collect(Collectors.toList());
         for (Path file : list) {
             SeekableByteChannel newByteChannel = Files.newByteChannel(file);
             boolean r = true;
@@ -654,12 +655,12 @@ public class SafeOptTest {
                 ByteBuffer allocate = ByteBuffer.allocate(capacity);
                 int read = newByteChannel.read(allocate);
                 r = read == capacity;
-
+                
             }
         }
-
+        
     }
-
+    
     public static void main(String[] args) throws Exception {
 
 //        new SafeOptTest().testAsyncReal();
@@ -689,7 +690,7 @@ public class SafeOptTest {
         }
         ExecutorService def = Checked.createDefaultExecutorService();
         ArrayList<Future> futures = new ArrayList<>();
-
+        
         for (int i = 0; i < 20000; i++) {
             final int in = i;
             Future<?> submit = def.submit(() -> {
@@ -699,18 +700,18 @@ public class SafeOptTest {
                             read();
                             return n;
                         });
-
+                        
                     }
                     return SafeOpt.ofAsync(m).peek(v -> {
                         Thread.sleep(20000);
                     });
                 }).peek(m -> {
-
+                    
                     System.out.println(in);
                 }).get();
             });
             futures.add(submit);
-
+            
         }
         for (Future f : futures) {
             f.get();
